tests/derive-specifier/out-of-bounds.stderr
error[E0277]: the trait bound `False: SpecifierHasAtMost128Bits` is not satisfied
   --> $DIR/out-of-bounds.rs:4:1
    |
4   | / #[derive(BitfieldSpecifier, Debug)]
5   | | pub struct Header {
6   | |     a: B1,
7   | |     b: B128,
8   | | }
    | |_^ the trait `SpecifierHasAtMost128Bits` is not implemented for `False`
    |
   ::: $WORKSPACE/src/private/checks.rs
    |
    |       <Self::CheckType as DispatchTrueFalse>::Out: SpecifierHasAtMost128Bits,
    |                                                    ------------------------- required by this bound in `CheckSpecifierHasAtMost128Bits`
